--- a/css/tetris_modoki.css
+++ b/css/tetris_modoki.css
@@ -16,61 +16,35 @@ body {
     line-break: normal;/* auto:禁則処理を行わない / loose:最低限の禁則処理 / normal:一般的な禁則処理ルールを適用 / strict:細かな禁則処理うルールを適用 */
     word-wrap: normal;
 }
-
-.body_tetris {
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-}
-
 .text-align-left {
     text-align: left;
 }
-
 .text-align-right {
     text-align: right;
 }
-
 .text-align-center {
     text-align: center;
 }
 
-.position-left {
-    position: sticky;
-    left: 0;
-}
+/* ここまで waya0125.com からの移植・構文改変 */
 
-.position-right {
-    position: sticky;
-    right: 0;
-}
-
-.position-center {
+/* Tetris 表示領域 */
+.tetris {
+    width: 456px;
+    height: auto;
+    display: flex;
     position: absolute;
     left: 50%;
     transform: translate(-50%,0);
+    background-color: #8DAD30;
 }
-
-/* idにdisplayが含まれている場合
- * displayを判定に含ませてbrしなくてもいいようにする
- */
-[id*="display"] {
-    display: block;
+.tetriminoStatus {
 }
-
-/* idにbuttonsが含まれている場合
- * buttonsを判定に含ませてbrしなくてもいいようにする
- */
-[id*="buttons"] {
-    display: block;
-    padding-top: 34em;
+.tetriminoNext {
+    border-left-width: 168px;
+    border-top-width: 432px;
 }
-
-.test {
-    display: block;
-}
-
-/* ここまで waya0125.com からの移植・構文改変 */
+/* ここまで Tetris 表示領域 */
 
 *{
     padding: 0;
@@ -78,99 +52,104 @@ body {
 }
 
 /* ゲーム画面表示場所の大きさとか */
-#display {
-    width: calc(24px * 12);
-    height: calc(24px * 22);
+.BoxI {
+    padding-left: 10%;
+    padding-top: 186%;
+}
+.BoxT {
+    padding-left: 15%;
+    padding-top: 200%;
+}
+.BoxO {
+    padding-left: 15%;
+    padding-top: 200%;
+}
+.BoxZ {
+    padding-left: 15%;
+    padding-top: 200%;
+}
+.BoxS {
+    padding-left: 15%;
+    padding-top: 200%;
+}
+.BoxL {
+    padding-left: 15%;
+    padding-top: 192.5%;
+}
+.BoxJ {
+    padding-left: 15%;
+    padding-top: 192.5%;
+}
+
+#tetriminoScore {
+    width: 168px;  /* 画像の横幅 */
+    height: 432px; /* 画像の縦幅 */
+    background-image: url(../img/svg/tetris_Status2.svg);
+}
+#tetriminoDraw {
+    display: block;          /* ﾃﾄﾘﾐﾉ一個ごとに改行 */
+    width: calc(24px * 12);  /* 12マス分 */
+    height: calc(24px * 18); /* 18マス分 */
 }
 
 /* 1マスの大きさとか色(デフォルト 黒) */
-.cell {
-    width: 22px;
-    height: 22px;
-    display:block;
+.cellPreview {
+    width: 24px;
+    height: 24px;
+    display: flow;
     float: left;
-    background-color: rgb(32, 32, 32);
-    border-left: 1px solid rgb(64, 64, 64);
-    border-top: 1px solid rgb(64, 64, 64);
-    border-right: 1px solid rgb(16, 16, 16);
-    border-bottom: 1px solid rgb(16, 16, 16);
+    background-color: #8DAD30;
+}
+.cell {
+    width: 24px;
+    height: 24px;
+    display: block;
+    float: left;
+    background-color: #8DAD30;
+}
+.background {
+    background-color: #8DAD30;
 }
 
 /* 外側の壁用のマスの色(灰色) */
-.wall {
-    background-color: rgb(128, 128, 128);
-    border-left: 1px solid rgb(192, 192, 192);
-    border-top: 1px solid rgb(192, 192, 192);
-    border-right: 1px solid rgb(64, 64, 64);
-    border-bottom: 1px solid rgb(64, 64, 64);
+.wall1 {
+    background-image: url(../img/svg/tetris_Block1.svg);
 }
-
-/* 水色 */
+.wall2 {
+    background-image: url(../img/svg/tetris_Block2.svg);
+}
+.wall3 {
+    background-image: url(../img/svg/tetris_Block3.svg);
+}
 .I {
-    background-color: #3399ff;
-    border-left: 1px solid #99ccff;
-    border-top: 1px solid #99ccff;
-    border-right: 1px solid #0066ff;
-    border-bottom: 1px solid #0066ff;
+    background-image: url(../img/svg/tetris_I.svg);
 }
-
-/* 紫色 */
 .T {
-    background-color: #cc33cc;
-    border-left: 1px solid #cc66cc;
-    border-top: 1px solid #cc66cc;
-    border-right: 1px solid #cc00cc;
-    border-bottom: 1px solid #cc00cc;
+    background-image: url(../img/svg/tetris_T.svg);
 }
-
-/* 黄色 */
 .O {
-    background-color: #ccff00;
-    border-left: 1px solid #ffff00;
-    border-top: 1px solid #ffff00;
-    border-right: 1px solid #99cc00;
-    border-bottom: 1px solid #99cc00;
+    background-image: url(../img/svg/tetris_O.svg);
 }
-
-/* 赤色 */
 .Z {
-    background-color: #ff0033;
-    border-left: 1px solid #cc3366;
-    border-top: 1px solid #cc3366;
-    border-right: 1px solid #cc0033;
-    border-bottom: 1px solid #cc0033;
+    background-image: url(../img/svg/tetris_Z.svg);
 }
-
-/* 黄緑色 */
 .S {
-    background-color: #66cc33;
-    border-left: 1px solid #99ff66;
-    border-top: 1px solid #99ff66;
-    border-right: 1px solid #339900;
-    border-bottom: 1px solid #339900;
+    background-image: url(../img/svg/tetris_S.svg);
 }
-
-/* オレンジ色 */
 .L {
-    background-color: #ff6600;
-    border-left: 1px solid #ff9966;
-    border-top: 1px solid #ff9966;
-    border-right: 1px solid #cc6633;
-    border-bottom: 1px solid #cc6633;
+    background-image: url(../img/svg/tetris_L.svg);
 }
-
-/* 青色 */
 .J {
-    background-color: #0033cc;
-    border-left: 1px solid #0066ff;
-    border-top: 1px solid #0066ff;
-    border-right: 1px solid #000099;
-    border-bottom: 1px solid #000099;
+    background-image: url(../img/svg/tetris_J.svg);
 }
 
 /* ボタン */
-#rotate, #left, #up, #right, #down {
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
+[id*="buttons"] {
+    padding-top: 28em;
+}
+#playing, #rotate, #left, #up, #right, #down {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 27px;
 }
