--- a/css/tetris_modoki.css
+++ b/css/tetris_modoki.css
@@ -5,8 +5,12 @@
  * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-/* waya0125.com より移植 */
+@font-face {
+    font-family: 'EarlyGameBoy';
+    src: url('../font/EarlyGameBoy.ttf') format('truetype');
+}
 
+/* waya0125.com より移植 */
 body {
     position: relative;
     text-align: center;
@@ -39,6 +43,36 @@ table {
     transform: translate(-50%,0);
 }
 /* ここまで waya0125.com からの移植・構文改変 */
+
+.gbFont {
+    font-family: 'EarlyGameBoy', system-ui;
+    font-size: 23px;
+    color: #1f4130;
+}
+.scoreTitle {
+    padding-top: 14%;
+    padding-left: 3%;
+}
+#score {
+    padding-top: 13%;
+    padding-left: 3%;
+}
+.levelTitle {
+    padding-top: 28%;
+    padding-left: 3%;
+}
+#level {
+    margin-top: -2.5%;
+    padding-left: 3%;
+}
+.linesTitle {
+    padding-top: 13.5%;
+    padding-left: 3%;
+}
+#lines {
+    margin-top: -2.5%;
+    padding-left: 3%;
+}
 
 /* Tetris 表示領域 */
 .tetris {
