--- a/css/tetris_modoki.css
+++ b/css/tetris_modoki.css
@@ -183,11 +183,10 @@ table {
 
 /* ボタン */
 [id*="buttons"] {
-    padding-top: 28em;
+    padding-top: 53%;
 }
 #playing, #rotate, #left, #up, #right, #down {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    font-size: 27px;
+    display: inline-grid;
+    width: 42px;
+    height: 42px;
 }
